# CuriosityPPOAgent

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  EXPERIMENT.md  LICENSE  Makefile  README.md  README_EN.md  pyproject.toml  requirements.txt  requirements_atari.txt
assets/: repo_cover_desc.txt
benchmarks/: eval_atari.py  eval_crafter.py  eval_minigrid.py  report.py
docs/: ABLATION_REPORT.md  ATARI_POSTTRAIN_AND_ABLATION.md  ATARI_RESUME.md  BENCHMARKS.md  EXECUTION_PLAN.md  EXECUTION_PLAN_v2.md  HYPERPARAMETERS.md  KAGGLE_FREE_GPU.md  TECH_EVOLUTION.md  VRAM_OPTIMIZATION.md  WANDB_DASHBOARD.md  git_12_batch_commit_guide.md  git_batch_push_github_guide.md  git_upload_step.md  local_pre_upload_check.md  pre_git_push_local_check.md  release_note.md  repo_self_checklist.md  repo_tags.md
examples/: quickstart.py
experiments/: atari_montezuma_full.yaml  atari_montezuma_full_ent002.yaml  atari_montezuma_no_episodic.yaml  atari_montezuma_no_icm.yaml  atari_montezuma_no_rnd.yaml  atari_pong_quick.yaml  config.yaml  crafter_extweighted.yaml  crafter_full.yaml  crafter_no_episodic.yaml  crafter_no_icm.yaml  crafter_no_rnd.yaml  crafter_standard_ppo.yaml  minigrid_curriculum_p1_fixed.yaml  minigrid_curriculum_p2_random.yaml  minigrid_doorkey_full.yaml  minigrid_doorkey_no_episodic.yaml  minigrid_doorkey_no_icm.yaml  minigrid_doorkey_no_rnd.yaml  minigrid_potential_shaping.yaml
notes/: ACCEL_VERIFY.md  ATARI_FULL_PLAYBOOK.md  ATARI_SINGLEGPU_VERIFY.md  DLC_LAUNCH_ATARI.md  DSW_NEW_INSTANCE_GUIDE.md  MINIGRID_SINGLEGPU_VERIFY.md  PLAN_A_ATARI_CLOUD.md  (+1 more)
(+100 files in other folders)
